--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "redux-thunk": "^2.3.0",
+    "sockjs-client": "^1.5.0",
     "web-vitals": "^0.2.4"
   },
   "devDependencies": {
