--- a/client/package.json
+++ b/client/package.json
@@ -21,8 +21,10 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "react-stomp": "^5.1.0",
     "redux-thunk": "^2.3.0",
     "sockjs-client": "^1.5.0",
+    "stompjs": "^2.3.3",
     "web-vitals": "^0.2.4"
   },
   "devDependencies": {
